[PM-7565] fix filter icon alignment (#8790)
update styles so that folders and subfolders are correctly aligned in vault filters on web and desktop

--- a/apps/desktop/src/scss/left-nav.scss
+++ b/apps/desktop/src/scss/left-nav.scss
@@ -141,6 +141,8 @@
       color: themed("headingButtonColor");
     }
 
+    margin-right: 0.25rem;
+
     &:hover,
     &:focus {
       @include themify($themes) {
